R585 slice 1: input-field resolution carries a typed rejection
InputFieldResolution.Unresolved was the standing exception to "builder-step
results are sealed, not strings or out-params": it carried (fieldName,
lookupColumn, reason) where every sibling result carries a Rejection. At most
producer sites the classifier already had a Rejection in hand and called
.message() on it because the carrier could not hold one.

Unresolved is now (fieldName, location, rejection), and every producer in the
classifier goes through one private factory that stamps the failing field's own
location, so no arm can reintroduce the locationless carrier the fan-ins used to
report at the consuming coordinate. The five discarded rejections are handed
through intact; the retired-directive arms move to directiveConflict so each
cause has one identity carrying its directive name; the FK-target key-mismatch
case moves to Rejection.deferred, the arm its own message asks for, from both the
argument site and the input-field site.

buildInputFieldCondition's List<String> out-param becomes a typed accumulator of
InputFieldConditionFailure (fieldName, location, rejection). The coordinate
context is rendered by that record rather than prefixed onto the rejection,
because the reflect arms it usually holds are typed sub-seals whose prefixedWith
is a deliberate no-op.

Causes whose upstream still reports prose (ParsedPath, ConditionDirective's
argMappingError, ArgBindingMap's two prose-only arms) route through one named
boundary wrap, so "this cause is not yet typed" sits in one identifiable place
instead of leaving Unresolved polymorphic between prose and type.

The folds stay, and rendered text stays byte-identical apart from two deliberate
changes: a single-cause fold now keeps its producer's arm instead of flattening
to structural prose, and the two "did you mean" hints the folds used to compose
are gone, since each typed arm renders its own from one candidate space (the
nesting fold's copy read SQL n